--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,55 @@
 <mat-toolbar color="primary" class="expanded-toolbar">
-  <span>
-    <button mat-button routerLink="/">aqui vai titulo</button>
-    <button mat-button routerLink="/"><mat-icon>home</mat-icon></button>
-  </span>
-<div fxLayout="row" fxShow="false" fxShow.gt-sm>
-  <!-- <button mat-button routerLink="/login" *ngIf="!isAuthenticated">
-    <mat-icon>power_settings_new</mat-icon>
-    Login
-  </button> -->
-  <button mat-button *ngIf="currentUser" (click)="logout()">
+  
+  <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
+    <mat-icon>menu</mat-icon>
+  </button>
+
+  <div fxLayout="row" fxShow.gt-sm>
+    <span>
+      {{ title }}
+    </span>
+  </div>
+
+  <div fxLayout="row" fxShow="false" fxShow.gt-sm>
+    <button mat-button routerLink="/login" *ngIf="!currentUser">
+      <mat-icon>power_settings_new</mat-icon>
+      Login
+    </button>
+
+    <button *ngIf="currentUser" mat-button routerLink="/">
+      <mat-icon>home</mat-icon>
+    </button>
+
+    <button *ngIf="currentUser" mat-button routerLink="/careers">
+      <mat-icon>people</mat-icon> Careers
+    </button>
+
+    <button mat-button *ngIf="currentUser" (click)="logout()">
+      <mat-icon>exit_to_app</mat-icon>
+      Logout
+    </button>
+
+  </div>
+
+</mat-toolbar>
+
+<mat-menu x-position="before" #menu="matMenu">
+  
+  <button mat-menu-item routerLink="/">
+    <mat-icon>home</mat-icon>
+    Home
+  </button>
+
+  <button *ngIf="currentUser" mat-menu-item routerLink="/careers">
+    <mat-icon>people</mat-icon> Careers
+  </button>
+
+  <button mat-menu-item *ngIf="currentUser" (click)="logout()">
     <mat-icon>exit_to_app</mat-icon>
     Logout
   </button>
-
-  <button mat-button routerLink="/game">
-    <mat-icon>gamepad</mat-icon>
-    Play
-  </button>
-</div>
-<button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
-  <mat-icon>menu</mat-icon>
-</button>
-</mat-toolbar>
-<mat-menu x-position="before" #menu="matMenu">
-<button mat-menu-item routerLink="/">
-  <mat-icon>home</mat-icon>
-  Home
-</button>
-<button mat-menu-item routerLink="/game">
-  <mat-icon>gamepad</mat-icon>
-  Play
-</button>
-<!-- <button mat-menu-item routerLink="/login" *ngIf="!isAuthenticated">
-  <mat-icon>power_settings_new</mat-icon>
-  Login
-</button>
-<button mat-menu-item *ngIf="isAuthenticated" (click)="logout()">
-  <mat-icon>exit_to_app</mat-icon>
-  Logout
-</button> -->
 </mat-menu>
-<router-outlet></router-outlet>
+
+<router-outlet>
+  
+</router-outlet>
