--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -31,31 +31,29 @@
     </div>
 </div> -->
 <mat-card>
-    <mat-card-content>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <h2>Log In</h2>
-        <mat-error *ngIf="submitted && f.email.errors">
-          The username and password were not recognised
+  <mat-card-content>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <h2>Log In</h2>
+      <mat-error *ngIf="submitted && f.email.errors">
+        The username and password were not recognised
+      </mat-error>
+      <mat-form-field class="full-width-input">
+        <input matInput placeholder="Email" formControlName="email" required>
+        <mat-error>
+          Please provide a valid email address
         </mat-error>
-        <mat-form-field class="full-width-input">
-          <input matInput placeholder="Email" formControlName="email" required>
-          <mat-error>
-            Please provide a valid email address
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width-input">
-          <input matInput type="password" placeholder="Password" formControlName="password" required>
-          <mat-error>
-            Please provide a valid password
-          </mat-error>
-        </mat-form-field>
-        <button mat-raised-button color="primary">Login</button>
-      </form>
-      <mat-card>
-        <mat-card-content>
-          <h2 class="example-h2">Result</h2>
-          {{ loading }}
-        </mat-card-content>
-      </mat-card>
-    </mat-card-content>
-  </mat-card>   
+      </mat-form-field>
+      <mat-form-field class="full-width-input">
+        <input matInput type="password" placeholder="Password" formControlName="password" required>
+        <mat-error>
+          Please provide a valid password
+        </mat-error>
+      </mat-form-field>
+      <button mat-raised-button color="primary">Login</button>
+      <div class="loading">
+        <mat-progress-spinner *ngIf="loading" [mode]="'indeterminate'">
+        </mat-progress-spinner>
+      </div>
+    </form>
+  </mat-card-content>
+</mat-card>
