--- a/src/app/components/careers/careers-add/careers-add.component.html
+++ b/src/app/components/careers/careers-add/careers-add.component.html
@@ -1,1 +1,27 @@
-<p>careers-add works!</p>
+<mat-card fxFlex="100%">
+
+    <mat-card-title fxLayoutAlign="center">
+        {{ screenTtile }}
+    </mat-card-title>
+
+    <form [formGroup]="careerForm" (ngSubmit)="submitCareerForm()" #resetStudentForm="ngForm">
+        <mat-card-content>
+            <mat-card-content>
+                <mat-form-field class="example-full-width">
+                    <input matInput placeholder="Career Title" formControlName="title" required>
+                    <mat-error>
+                        title is required!
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field class="example-full-width">
+                    <input matInput placeholder="Club Name" formControlName="team_name" required>
+                </mat-form-field>
+            </mat-card-content>
+            <mat-card-footer fxLayoutAlign="center">
+                <button mat-flat-button color="primary">Save</button>
+            </mat-card-footer>
+        </mat-card-content>
+    </form>
+
+</mat-card>
