--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,59 @@
 <mat-toolbar color="primary" class="expanded-toolbar">
-  
-  <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
+
+    <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
     <mat-icon>menu</mat-icon>
   </button>
 
-  <div fxLayout="row" fxShow.gt-sm>
-    <span>
+    <button mat-button>
+      <mat-icon (click)="backClicked()">arrow_back</mat-icon>
+    </button>
+
+    <div fxLayout="row" fxShow.gt-sm>
+        <span>
       {{ title }}
     </span>
-  </div>
+    </div>
 
-  <div fxLayout="row" fxShow="false" fxShow.gt-sm>
-    <button mat-button routerLink="/login" *ngIf="!currentUser">
+    <div fxLayout="row" fxShow="false" fxShow.gt-sm>
+        <button mat-button routerLink="/login" *ngIf="!currentUser">
       <mat-icon>power_settings_new</mat-icon>
       Login
     </button>
 
-    <button *ngIf="currentUser" mat-button routerLink="/">
+        <button *ngIf="currentUser" mat-button routerLink="/">
       <mat-icon>home</mat-icon>
     </button>
 
-    <button *ngIf="currentUser" mat-button routerLink="/careers">
+        <button *ngIf="currentUser" mat-button routerLink="/careers">
       <mat-icon>people</mat-icon> Careers
     </button>
 
-    <button mat-button *ngIf="currentUser" (click)="logout()">
+        <button mat-button *ngIf="currentUser" (click)="logout()">
       <mat-icon>exit_to_app</mat-icon>
       Logout
     </button>
 
-  </div>
+    </div>
 
 </mat-toolbar>
 
 <mat-menu x-position="before" #menu="matMenu">
-  
-  <button mat-menu-item routerLink="/">
+
+    <button mat-menu-item routerLink="/">
     <mat-icon>home</mat-icon>
     Home
   </button>
 
-  <button *ngIf="currentUser" mat-menu-item routerLink="/careers">
+    <button *ngIf="currentUser" mat-menu-item routerLink="/careers">
     <mat-icon>people</mat-icon> Careers
   </button>
 
-  <button mat-menu-item *ngIf="currentUser" (click)="logout()">
+    <button mat-menu-item *ngIf="currentUser" (click)="logout()">
     <mat-icon>exit_to_app</mat-icon>
     Logout
   </button>
 </mat-menu>
 
 <router-outlet>
-  
+
 </router-outlet>
