list players of career and edit points

--- a/src/app/components/careers/careers-add/careers-add.component.html
+++ b/src/app/components/careers/careers-add/careers-add.component.html
@@ -4,7 +4,7 @@
         {{ screenTtile }}
     </mat-card-title>
 
-    <form [formGroup]="careerForm" (ngSubmit)="submitCareerForm()" #resetStudentForm="ngForm">
+    <form [formGroup]="careerForm" (ngSubmit)="submitCareerForm()" #resetCareerForm="ngForm">
         <mat-card-content>
             <mat-card-content>
                 <mat-form-field class="example-full-width">
