--- a/src/app/components/careers/careers-list/careers-list.component.html
+++ b/src/app/components/careers/careers-list/careers-list.component.html
@@ -1,7 +1,7 @@
-<mat-card-content>
-    <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
-        <h2> {{ screenTtile }} </h2>
-    </div>
+<mat-card-content fxLayoutAlign="center">
+    <!-- <div fxLayoutAlign="center"> -->
+    <h2> {{ screenTtile }} </h2>
+    <!-- </div> -->
 </mat-card-content>
 
 <table mat-table [dataSource]="careers" class="mat-elevation-z8">
@@ -21,14 +21,23 @@
         <td mat-cell *matCellDef="let element"> {{element.total_players}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef> actions </th>
+        <td mat-cell *matCellDef="let row">
+            <a mat-flat-button (click)="editCareer(row)">
+                <mat-icon>edit</mat-icon>
+            </a>
+        </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="editCareer(row)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="detailCareer(row)"></tr>
 
 </table>
 
 <mat-card-content>
     <div fxLayout="row" fxLayoutAlign="end start">
-        <button mat-fab color="primary" routerLink="/careers/add" aria-label="Add Career">
+        <button mat-fab color="primary" routerLink="/career/add" aria-label="Add Career">
             <mat-icon>add</mat-icon>
         </button>
     </div>
