--- a/src/app/components/careers/career-detail/career-detail.component.html
+++ b/src/app/components/careers/career-detail/career-detail.component.html
@@ -25,6 +25,15 @@
 
                     <mat-card class="mat-elevation-z4" style="background-color: lightgray">
                         <mat-card-subtitle fxLayoutAlign="center">
+                            Position
+                        </mat-card-subtitle>
+                        <mat-card-title fxLayoutAlign="center">
+                            {{ player.position }}
+                        </mat-card-title>
+                    </mat-card>
+
+                    <mat-card class="mat-elevation-z4" style="background-color: lightgray">
+                        <mat-card-subtitle fxLayoutAlign="center">
                             Age current
                         </mat-card-subtitle>
                         <mat-card-title fxLayoutAlign="center">
@@ -32,7 +41,16 @@
                         </mat-card-title>
                     </mat-card>
 
-                    <mat-card matRipple (click)="openDialog(player)" style="background-color: lightskyblue;">
+                    <mat-card class="mat-elevation-z4" style="background-color: lightyellow;">
+                        <mat-card-subtitle fxLayoutAlign="center">
+                            Points Initial
+                        </mat-card-subtitle>
+                        <mat-card-title fxLayoutAlign="center">
+                            {{ player.points_initial }}
+                        </mat-card-title>
+                    </mat-card>
+
+                    <mat-card class="mat-elevation-z4" (click)="openDialog(player)" style="background-color: lightskyblue;">
                         <mat-card-subtitle fxLayoutAlign="center">
                             Points Current
                         </mat-card-subtitle>
@@ -41,7 +59,7 @@
                         </mat-card-title>
                     </mat-card>
 
-                    <mat-card style="background-color: lightyellow;">
+                    <mat-card class="mat-elevation-z4" style="background-color: lightyellow;">
                         <mat-card-subtitle fxLayoutAlign="center">
                             Potencial Initial
                         </mat-card-subtitle>
@@ -50,7 +68,7 @@
                         </mat-card-title>
                     </mat-card>
 
-                    <mat-card style="background-color: lightyellow;">
+                    <mat-card class="mat-elevation-z4" style="background-color: lightyellow;">
                         <mat-card-subtitle fxLayoutAlign="center">
                             Potencial Final
                         </mat-card-subtitle>
