--- a/src/app/components/careers/dialog-update-points/dialog-update-points.component.html
+++ b/src/app/components/careers/dialog-update-points/dialog-update-points.component.html
@@ -8,7 +8,7 @@
         <mat-card-content>
             <mat-card-content>
 
-                <mat-form-field class="example-full-width">
+                <mat-form-field>
                     <input matInput type="number" placeholder="New current Points" formControlName="newPoints" min="0" max="99" required>
                     <mat-error>
                         Points not permited
