--- a/src/app/components/careers/careers-add/careers-add.component.html
+++ b/src/app/components/careers/careers-add/careers-add.component.html
@@ -7,14 +7,14 @@
     <form [formGroup]="careerForm" (ngSubmit)="submitCareerForm()" #resetCareerForm="ngForm">
         <mat-card-content>
             <mat-card-content>
-                <mat-form-field class="example-full-width">
+                <mat-form-field>
                     <input matInput placeholder="Career Title" formControlName="title" required>
                     <mat-error>
                         title is required!
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field class="example-full-width">
+                <mat-form-field>
                     <input matInput placeholder="Club Name" formControlName="team_name" required>
                 </mat-form-field>
             </mat-card-content>
