--- a/src/app/components/careers/career-detail/career-detail.component.html
+++ b/src/app/components/careers/career-detail/career-detail.component.html
@@ -1,9 +1,14 @@
-<mat-card flexLayoutGap fxLayout="column" style="padding-bottom: 30px;" fxLayoutGap="10px">
+<div *ngIf="loading" fxLayout style="position:absolute; " fxFill fxLayoutAlign="space-around center">
+    <mat-spinner></mat-spinner>
+</div>
+
+<mat-card *ngIf="!loading" flexLayoutGap fxLayout="column" style="padding-bottom: 30px;" fxLayoutGap="10px">
     <mat-card-title>{{ career.title }}</mat-card-title>
     <mat-card-subtitle>{{ career.team_name}}</mat-card-subtitle>
     <mat-card-content flexLayoutGap fxLayout="column" fxFlex.xs="100%" fxFlex.sm="33%" fxLayoutGap="10px">
 
         <mat-card *ngFor="let player of players">
+
             <mat-card-title fxLayoutAlign="center center" fxLayout="row" s>
                 <div style="width: 100%;">
                     {{ player.name }}
@@ -19,6 +24,7 @@
                     </button>
                 </div>
             </mat-card-title>
+
             <mat-card-content>
 
                 <div fxLayout.xs="column" fxLayout="row wrap" fxLayoutGap="10px" ngClass.gt-xs="ml-10">
@@ -50,7 +56,7 @@
                         </mat-card-title>
                     </mat-card>
 
-                    <mat-card class="mat-elevation-z4" (click)="openDialog(player)" style="background-color: lightskyblue;">
+                    <mat-card class="mat-elevation-z4" (click)="openDialogUpdateCurrentPoints(player)" style="background-color: lightskyblue;">
                         <mat-card-subtitle fxLayoutAlign="center">
                             Points Current
                         </mat-card-subtitle>
