--- a/src/app/components/careers/careers-list/careers-list.component.html
+++ b/src/app/components/careers/careers-list/careers-list.component.html
@@ -1,4 +1,17 @@
-<mat-card>
+<div *ngIf="loading" fxLayout style="position:absolute; " fxFill fxLayoutAlign="space-around center">
+    <mat-spinner></mat-spinner>
+</div>
+
+<div *ngIf="!careers" fxFlexFill fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
+    <br />
+    <mat-icon>warning</mat-icon>
+    <h3>Nenhum dado encontrado</h3>
+    <button mat-fab color="primary" routerLink="/career/add" aria-label="Add Career">
+        <mat-icon>add</mat-icon>
+    </button>
+</div>
+
+<mat-card *ngIf="!loading && careers">
 
     <mat-card-content fxLayout="column" fxLayoutGap="5px">
 
@@ -32,5 +45,4 @@
         </mat-card-footer>
 
     </mat-card-content>
-
 </mat-card>
