--- a/src/app/components/careers/careers-list/careers-list.component.html
+++ b/src/app/components/careers/careers-list/careers-list.component.html
@@ -2,18 +2,15 @@
     <mat-spinner></mat-spinner>
 </div>
 
-<div *ngIf="!careers" fxFlexFill fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
-    <br />
-    <mat-icon>warning</mat-icon>
-    <h3>Nenhum dado encontrado</h3>
-    <button mat-fab color="primary" routerLink="/career/add" aria-label="Add Career">
-        <mat-icon>add</mat-icon>
-    </button>
-</div>
-
-<mat-card *ngIf="!loading && careers">
+<mat-card *ngIf="!loading">
 
     <mat-card-content fxLayout="column" fxLayoutGap="5px">
+
+        <div *ngIf="!careers" fxFlexFill fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
+            <br />
+            <mat-icon>warning</mat-icon>
+            <h3>Nenhum dado encontrado</h3>
+        </div>
 
         <mat-card *ngFor="let career of careers" (click)="detailCareer(career)" class="mat-elevation-z8">
             <mat-card-title fxLayout="row">
