--- a/src/app/components/careers/career-detail/career-detail.component.html
+++ b/src/app/components/careers/career-detail/career-detail.component.html
@@ -17,7 +17,7 @@
 
         <mat-card-content *ngIf="players.length<1" fxFlexFill fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
             <br />
-            <mat-icon>warning</mat-icon>
+            <mat-icon class="not-found">warning</mat-icon>
             <h3>Nenhum jogador encontrado</h3>
         </mat-card-content>
 
