--- a/src/app/components/careers/careers-list/careers-list.component.html
+++ b/src/app/components/careers/careers-list/careers-list.component.html
@@ -8,7 +8,7 @@
 
         <div *ngIf="!careers" fxFlexFill fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
             <br />
-            <mat-icon>warning</mat-icon>
+            <mat-icon class="not-found">warning</mat-icon>
             <h3>Nenhum dado encontrado</h3>
         </div>
 
