some fixes add player

--- a/src/app/components/player/player-list/player-list.component.html
+++ b/src/app/components/player/player-list/player-list.component.html
@@ -14,7 +14,7 @@
     aria-label="Add new player"
     mat-fab
     color="primary"
-    (click)="(addPlayer)"
+    (click)="addPlayer()"
   >
     <mat-icon>add</mat-icon>
   </button>
